[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/enemies/badguy.gd" type="Script" id=1]
[ext_resource path="res://scenes/master/SFX.gd" type="Script" id=2]
[ext_resource path="res://scenes/enemies/badguy_sm.gd" type="Script" id=3]
[ext_resource path="res://sounds/enemies/fall.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/enemies/squish.wav" type="AudioStream" id=5]
[ext_resource path="res://images/enemies/bomb/walk2.png" type="Texture" id=6]
[ext_resource path="res://images/enemies/bomb/hiss1.png" type="Texture" id=7]
[ext_resource path="res://images/enemies/bomb/hiss2.png" type="Texture" id=8]
[ext_resource path="res://images/enemies/bomb/walk3.png" type="Texture" id=9]
[ext_resource path="res://scenes/master/bounce_area.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/master/damage_area.tscn" type="PackedScene" id=11]
[ext_resource path="res://images/enemies/bomb/walk1.png" type="Texture" id=12]
[ext_resource path="res://images/enemies/bomb/explode1.png" type="Texture" id=13]
[ext_resource path="res://images/enemies/bomb/explode2.png" type="Texture" id=14]
[ext_resource path="res://sounds/enemies/explode.wav" type="AudioStream" id=15]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "squished",
"speed": 15.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "explode",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14, 15 )

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 18, 8 )

[node name="Bomb" type="KinematicBody2D" groups=["enemies", "explodes"]]
collision_layer = 4
collision_mask = 5
script = ExtResource( 1 )
type = "Bomb"
turn_on_cliffs = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_pivot_offset = Vector2( 0, 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control"]
frames = SubResource( 7 )
animation = "walk"
frame = 2
playing = true
offset = Vector2( 0, -5 )

[node name="Explosion" type="AnimatedSprite" parent="Control"]
visible = false
frames = SubResource( 8 )
animation = "explode"
frame = 1
playing = true
offset = Vector2( 0, -16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[node name="DamageArea" parent="." groups=["enemies"] instance=ExtResource( 11 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( 0, 6 )
shape = SubResource( 5 )

[node name="BounceArea" parent="." instance=ExtResource( 10 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceArea"]
position = Vector2( 0, -8 )
shape = SubResource( 6 )

[node name="EdgeTurn" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 18 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
rect = Rect2( -160, -100, 320, 200 )
process_parent = true
physics_process_parent = true

[node name="SFX" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Squish" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 5 )

[node name="Explode" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 15 )

[node name="Fall" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource( 4 )

[node name="DestroyTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="FuseTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
[connection signal="timeout" from="FuseTimer" to="." method="_on_FuseTimer_timeout"]
