[gd_scene load_steps=17 format=2]

[ext_resource path="res://sounds/enemies/fall.wav" type="AudioStream" id=1]
[ext_resource path="res://images/enemies/flying_snowball/fly2.png" type="Texture" id=2]
[ext_resource path="res://images/enemies/flying_snowball/fly1.png" type="Texture" id=3]
[ext_resource path="res://images/enemies/flying_snowball/squished.png" type="Texture" id=4]
[ext_resource path="res://scenes/master/damage_area.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/enemies/badguy_sm.gd" type="Script" id=6]
[ext_resource path="res://scenes/enemies/badguy.gd" type="Script" id=7]
[ext_resource path="res://scenes/master/SFX.gd" type="Script" id=8]
[ext_resource path="res://scenes/master/bounce_area.tscn" type="PackedScene" id=9]
[ext_resource path="res://sounds/enemies/squish.wav" type="AudioStream" id=10]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "squished",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "fly",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14, 15 )

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 32, 8 )

[sub_resource type="Animation" id=8]
resource_name = "fly"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Flying/FlyingTarget:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1.5 ),
"transitions": PoolRealArray( -1.8, -1.8 ),
"update": 0,
"values": [ Vector2( 0, -64 ), Vector2( 0, 64 ) ]
}

[sub_resource type="CanvasItemMaterial" id=9]
blend_mode = 1

[node name="Flying" type="Node2D" groups=["enemies"]]

[node name="Flying" type="KinematicBody2D" parent="." groups=["enemies"]]
collision_layer = 4
collision_mask = 5
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}
type = "Flying"
sprite_faces_direction = false

[node name="StateMachine" type="Node" parent="Flying"]
script = ExtResource( 6 )

[node name="Control" type="Control" parent="Flying"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_pivot_offset = Vector2( 0, 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Flying/Control"]
frames = SubResource( 6 )
animation = "fly"
playing = true
offset = Vector2( 0, -1 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flying"]
position = Vector2( 0, 1 )
shape = SubResource( 4 )

[node name="DamageArea" parent="Flying" groups=["enemies"] instance=ExtResource( 5 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flying/DamageArea"]
position = Vector2( 0, 6 )
shape = SubResource( 5 )

[node name="BounceArea" parent="Flying" instance=ExtResource( 9 )]
entity_path = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flying/BounceArea"]
position = Vector2( 0, -8 )
shape = SubResource( 7 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="Flying"]
visible = false
rect = Rect2( -80, -100, 160, 200 )
process_parent = true
physics_process_parent = true

[node name="SFX" type="Node2D" parent="Flying"]
script = ExtResource( 8 )

[node name="Squish" type="AudioStreamPlayer2D" parent="Flying/SFX"]
stream = ExtResource( 10 )

[node name="Fall" type="AudioStreamPlayer2D" parent="Flying/SFX"]
stream = ExtResource( 1 )

[node name="DestroyTimer" type="Timer" parent="Flying"]
process_mode = 0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Flying"]
root_node = NodePath("../..")
autoplay = "fly"
anims/fly = SubResource( 8 )

[node name="Tween" type="Tween" parent="Flying"]

[node name="FlyingTarget" type="Node2D" parent="Flying"]
visible = false

[node name="ColorRect" type="ColorRect" parent="Flying/FlyingTarget"]
modulate = Color( 0, 0.12549, 1, 1 )
material = SubResource( 9 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0

[connection signal="body_entered" from="Flying/DamageArea" to="Flying" method="_on_DamageArea_body_entered"]
[connection signal="timeout" from="Flying/DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
